[USERS] - Botones activo / Inactivo

--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -1,18 +1,49 @@
 <app-back-arrow backRoute="clientes"></app-back-arrow>
 <div class="flex flex-col items-center justify-center h-full space-y-4 py-14 sm:w-full">
-
+  
   <!-- No Client Users -->
-  <div *ngIf="client.users?.length === 0" class="flex flex-col items-center justify-center w-full h-full space-y-4">
-    <p>Este cliente no posee usuarios</p>
-    <!-- Add User Btn -->
-    <button [routerLink]="['/clientes', client.id, 'crear-sede']" class="btn-primary hover:bg-green-900">
-      <span>Crear nuevo usuario</span>
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-      </svg>
-    </button>
-    <!-- End Add User Btn -->
+  <div class="flex flex-col items-center justify-center w-full h-full space-y-4">
+    <p *ngIf="client.users?.length === 0">Este cliente no posee usuarios</p>
+
+    <div class="flex flex-row">
+      <div class=" p-4">
+        <!-- Add User Btn -->
+        <button [routerLink]="['/clientes', client.id, 'crear-sede']" class="btn-primary hover:bg-green-900">
+          <span>Usuarios Activos</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+        <!-- End Add User Btn -->
+      </div>
+      <div class=" p-4">
+        <!-- Add User Btn -->
+        <button [routerLink]="['/clientes', client.id, 'crear-sede']" class="btn-primary hover:bg-green-900">
+          <span>Usuarios Inactivos</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M9.172 16.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+        <!-- End Add User Btn -->
+      </div>
+
+      <div class=" p-4">
+        <!-- Add User Btn -->
+        <button [routerLink]="['/clientes', client.id, 'crear-sede']" class="btn-primary hover:bg-green-900">
+          <span>Crear nuevo usuario</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+        <!-- End Add User Btn -->
+      </div>
+    </div>
+    
+    
+    
   </div>
   <!-- End No Client Users -->
 
