--- a/src/app/clients/user-form/user-form.component.html
+++ b/src/app/clients/user-form/user-form.component.html
@@ -1,113 +1,356 @@
-<app-back-arrow [backRoute]="'/clientes/'+ client.id + '/usuarios'"></app-back-arrow>
+<app-back-arrow
+  [backRoute]="'/clientes/' + client.id + '/usuarios'"
+></app-back-arrow>
 <div class="flex flex-col items-center justify-center w-full h-full space-y-4">
-
-
   <!-- Form Container -->
   <div class="flex flex-col items-center justify-center w-full">
-
-    <h1 class="mt-24 font-bold sm:mt-0 sm:mb-12 text:2xl sm:text-5xl">Nuevo Usuario</h1>
+    <h1 class="mt-24 font-bold sm:mt-0 sm:mb-12 text:2xl sm:text-5xl">
+      Nuevo Usuario
+    </h1>
 
     <!-- Errors -->
     <div class="h-12 font-bold text-red-500">
       <div *ngFor="let error of errors$ | async">
-        {{error.message}}
+        {{ error.message }}
       </div>
     </div>
     <!-- End Errors -->
 
     <!-- Form -->
-    <form [formGroup]="formGroup" class="flex flex-col items-center justify-center w-full space-y-8 sm:w-6/12">
-
-      <div class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row">
+    <form
+      [formGroup]="formGroup"
+      class="flex flex-col items-center justify-center w-full space-y-8 sm:w-6/12"
+    >
+     <!-- FOTO -->
+     <div class="flex flex-col w-full">
+      <label class="text-gray-400">
+        * Foto
+      </label>
+      <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
+        <div class="space-y-1 text-center">
+          <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+            <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+          <div class="flex flex-col w-full h-16 text-sm text-gray-600">
+            <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+              <span>Cargar un archivo</span>
+              <input id="file-upload" name="file-upload" type="file" class="sr-only">
+            </label>
+            <p class="pl-1">o arrastrar y soltar</p>
+          </div>
+          <p class="text-xs text-gray-500">
+            PNG, JPG, GIF up to 10MB
+          </p>
+        </div>
+      </div>
+    </div>
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
         <!-- firstName -->
         <div class="flex flex-col w-full h-16">
           <label class="text-gray-400" for="firstName">* Nombres:</label>
-          <input name="firstName" formControlName="firstName" required
+          <input
+            name="firstName"
+            formControlName="firstName"
+            required
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
-            [ngClass]="{'border-solid border-red-500 outline-red-500': formGroup.get('firstName')?.touched && formGroup.get('firstName')?.hasError('required')}"
-            type="text">
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('firstName')?.touched &&
+                formGroup.get('firstName')?.hasError('required')
+            }"
+            type="text"
+          />
         </div>
         <!-- lastName -->
         <div class="flex flex-col w-full h-16">
           <label class="text-gray-400" for="lastName">* Apellidos:</label>
-          <input name="lastName" formControlName="lastName" required
+          <input
+            name="lastName"
+            formControlName="lastName"
+            required
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
-            [ngClass]="{'border-solid border-red-500 outline-red-500': formGroup.get('lastName')?.touched && formGroup.get('lastName')?.hasError('required')}"
-            type="text">
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('lastName')?.touched &&
+                formGroup.get('lastName')?.hasError('required')
+            }"
+            type="text"
+          />
         </div>
       </div>
 
-      <div class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row">
-        <!-- email -->
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
+        <!-- CEDULA -->
         <div class="flex flex-col w-full h-16">
-          <label class="text-gray-400" for="email">* Correo electronico:</label>
-          <input name="email" formControlName="email" required
-            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" [ngClass]="{
-              'border-solid border-red-500 outline-red-500': formGroup.get('email')?.touched && formGroup.get('email')?.hasError('required')
-          }" type="text">
+          <label class="text-gray-400" for="sede">* Cédula:</label>
+          <input
+            name="cedula"
+            formControlName="cedula"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('cedula')?.touched &&
+                formGroup.get('cedula')?.hasError('required')
+            }"
+            type="text"
+          />
         </div>
+         <!-- email -->
+         <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="email">* Correo electronico:</label>
+          <input
+            name="email"
+            formControlName="email"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('email')?.touched &&
+                formGroup.get('email')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
+      </div>
+
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
         <!-- password-->
         <div class="flex flex-col w-full h-16">
           <label class="text-gray-400" for="password">* Contraseña:</label>
-          <input name="password" formControlName="password" required
+          <input
+            name="password"
+            formControlName="password"
+            required
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
-            [ngClass]="{'border-solid border-red-500 outline-red-500': formGroup.get('password')?.touched && formGroup.get('password')?.hasError('required')}"
-            type="text">
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('password')?.touched &&
+                formGroup.get('password')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
+        <!-- CLIENTE -->
+        <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="cliente">* Cliente:</label>
+          <input
+            name="cliente"
+            formControlName="cliente"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('cliente')?.touched &&
+                formGroup.get('cliente')?.hasError('required')
+            }"
+            type="text"
+          />
         </div>
       </div>
 
-      <div class="flex items-center justify-center w-full">
-
-        <!-- Measure indicators -->
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
+        <!-- SEDE -->
         <div class="flex flex-col w-full h-16">
-          <div class="py-2 max-w-xs ml-4 mt-6 rounded-xl border-solid border-2 border-gray-300 flex justify-center"
-            (click)="formGroup.get('measureIndicators')?.setValue(!formGroup.get('measureIndicators')?.value)">
-            <label class="flex items-center space-x-3" for="measureIndicators">
-              <input name="measureIndicators" formControlName="measureIndicators" type="checkbox" class="form-tick appearance-none h-6 w-6 border border-gray-300 rounded-md checked:border-brand checked:border-transparent focus:outline-none
-                checked:bg-brand">
-              <span class="text-gray-900 font-medium">Indicadores de medida</span>
-            </label>
-          </div>
+          <label class="text-gray-400" for="sede">* Sede:</label>
+          <input
+            name="sede"
+            formControlName="sede"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('sede')?.touched &&
+                formGroup.get('sede')?.hasError('required')
+            }"
+            type="text"
+          />
         </div>
-
+        <!-- MEDIO DE TRANSPORTE -->
+        <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="transPrin">* Medio de tranposrte principal:</label>
+          <input
+            name="transPrin"
+            formControlName="transPrin"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('transPrin')?.touched &&
+                formGroup.get('transPrin')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
       </div>
 
-
-      <div class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row">
-        <!-- kmToMaintenance-->
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
+        <!-- MEDIO DE TRANSPORTE SECUNDARIO -->
         <div class="flex flex-col w-full h-16">
-          <label class="text-gray-400" for="kmToMaintenance">* Kilometros de mantenimiento</label>
-          <input name="kmToMaintenance" formControlName="kmToMaintenance" required
+          <label class="text-gray-400" for="transSec">* Medio de tranposrte secundario:</label>
+          <input
+            name="transSec"
+            formControlName="transSec"
+            required
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
-            [ngClass]="{'border-solid border-red-500 outline-red-500': formGroup.get('kmToMaintenance')?.touched && formGroup.get('kmToMaintenance')?.hasError('required')}"
-            type="number">
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('transSec')?.touched &&
+                formGroup.get('transSec')?.hasError('required')
+            }"
+            type="text"
+          />
         </div>
-        <div class="flex flex-col w-full h-16"></div>
+        <!-- CELULAR -->
+        <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="sede">* teléfono Celular:</label>
+          <input
+            name="telCelular"
+            formControlName="telCelular"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('telCelular')?.touched &&
+                formGroup.get('telCelular')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
+      </div>
+
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
+        <!-- CONTACTO DE EMERGENCIA -->
+        <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="conEmergencia">* Contacto de emergencia:</label>
+          <input
+            name="conEmergencia"
+            formControlName="conEmergencia"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('conEmergencia')?.touched &&
+                formGroup.get('conEmergencia')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
+        <!-- TELEFONO CONTACTO EMERGENCIA-->
+        <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="telConEmergencia">* Teléfono contacto emergencia:</label>
+          <input
+            name="telConEmergencia"
+            formControlName="telConEmergencia"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('telConEmergencia')?.touched &&
+                formGroup.get('telConEmergencia')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
+      </div>
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
+        <!-- GRUPO SANGUINEO -->
+        <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="grupoSanguineo">* Grupo sanguineo:</label>
+          <input
+            name="grupoSanguineo"
+            formControlName="grupoSanguineo"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('grupoSanguineo')?.touched &&
+                formGroup.get('grupoSanguineo')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
+        <!-- EPS -->
+        <div class="flex flex-col w-full h-16">
+          <label class="text-gray-400" for="eps">* EPS:</label>
+          <input
+            name="eps"
+            formControlName="eps"
+            required
+            class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
+            [ngClass]="{
+              'border-solid border-red-500 outline-red-500':
+                formGroup.get('eps')?.touched &&
+                formGroup.get('eps')?.hasError('required')
+            }"
+            type="text"
+          />
+        </div>
+      </div>
+      <div
+        class="flex flex-col items-center justify-center w-full sm:space-x-8 sm:flex-row"
+      >
+        <!-- SEXO -->
+        <div class="flex flex-col w-full h-8">
+          <label class="text-gray-400" for="grupoSanguineo">* Sexo:</label>
+          <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+            <option>Masculino</option>
+            <option>Femenino</option>
+          </select>
+        </div>
       </div>
 
       <!-- Buttons -->
       <div class="flex items-center justify-center w-full">
         <div class="flex items-center justify-center w-full space-x-8">
           <!-- Create button -->
-          <button [ngClass]="{'opacity-40 cursor-default': !formGroup.valid}"
-            [disabled]="!formGroup.valid || (loader$ | async)" class="w-42 btn-primary" (click)="submitForm()">
+          <button
+            [ngClass]="{ 'opacity-40 cursor-default': !formGroup.valid }"
+            [disabled]="!formGroup.valid || (loader$ | async)"
+            class="w-42 btn-primary"
+            (click)="submitForm()"
+          >
             Crear
-            <svg *ngIf="loader$ | async" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 animate-spin" fill="none"
-              viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+            <svg
+              *ngIf="loader$ | async"
+              xmlns="http://www.w3.org/2000/svg"
+              class="w-4 h-4 animate-spin"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
+              />
             </svg>
           </button>
           <!-- Cancel button -->
-          <button type="reset" routerLink='/recursos'
-            class="flex items-center justify-center px-4 py-2 space-x-2 text-gray-400 bg-white border border-gray-400 rounded-md w-42 focus:outline-none">
+          <button
+            type="reset"
+            routerLink="/recursos"
+            class="flex items-center justify-center px-4 py-2 space-x-2 text-gray-400 bg-white border border-gray-400 rounded-md w-42 focus:outline-none"
+          >
             Cancelar
           </button>
         </div>
       </div>
-
-
     </form>
-
   </div>
 </div>
