--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -7,9 +7,8 @@
       <!-- Title -->
       <div class="flex items-center space-x-2 sm:space-x-4">
         <svg
-          routerLink="mantenimientos"
           xmlns="http://www.w3.org/2000/svg"
-          class="w-8 h-8 sm:w-12 sm:h-12 text-brand"
+          class="h-6 w-6 sm:w-12 sm:h-12 text-brand"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -18,7 +17,7 @@
             stroke-linecap="round"
             stroke-linejoin="round"
             stroke-width="2"
-            d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"
+            d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2"
           />
         </svg>
         <h1 class="font-bold text:2xl sm:text-5xl">{{ title }}</h1>
@@ -181,12 +180,14 @@
         >
           <thead>
             <tr>
-              <th>
-                <input
-                  name="checked"
-                  type="checkbox"
-                  class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
-                />
+              <th class="p-2">
+                <label class="flex items-center space-x-3" for="checked">
+                  <input
+                    name="checked"
+                    type="checkbox"
+                    class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
+                  />
+                </label>
               </th>
               <th>Foto</th>
               <th>Nombres</th>
