--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -1,3 +1,24 @@
+<div class="flex justify-between mt-12 mb-12 sm:m-0">
+  <!-- Title -->
+  <div class="flex items-center space-x-2 sm:space-x-4">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 sm:w-12 sm:h-12 text-brand" fill="none" viewBox="0 0 24 24"
+      stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
+    </svg>
+    <h1 class="font-bold text:2xl sm:text-5xl">{{title}}</h1>
+  </div>
+  <!-- End Title -->
+  <!-- Add Client Btn -->
+  <button *ngIf="showAddBtn" routerLink="nuevo-cliente" class="btn-primary hover:bg-green-900">
+    <span class="hidden sm:flex">Crear nuevo cliente</span>
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+    </svg>
+  </button>
+  <!-- End Add Client Btn -->
+</div>
 <div class="flex flex-col items-center justify-center h-full space-y-4 py-14 sm:w-full">
   <!-- Client Table Desktop only -->
   <table *ngIf="((clients$ |async)?.length !== 0) && !(loader$ | async)"
